# Repo-Intel

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
alembic/: env.py  script.py.mako
alembic/versions/: 53803dbf61dc_add_repository_chunk_and_agent_run_.py  6f4b85ee4990_remove_thread.py
app/: main.py
app/api/v1/: api.py  chatbot.py
app/api/v1/endpoints/: docs.py  issues.py  jobs.py  pull_requests.py  repositories.py
app/core/: cache.py  config.py  metrics.py  middleware.py
app/core/langgraph/: graph.py
app/core/langgraph/tools/: __init__.py  github_mcp.py  mcp_filesystem.py  pgvector_search.py
app/core/prompts/: system.md
app/indexer/: parser.py  pipeline.py
app/langgraph/agents/: doc_builder.py  issue_resolver.py  pr_reviewer.py
app/models/: agent_run.py  chunk.py  database.py  repository.py  session.py
app/schemas/: __init__.py  chat.py  graph.py
app/services/: database.py  memory.py  session_naming.py
app/services/llm/: registry.py
app/utils/: __init__.py  graph.py
frontend/: package-lock.json  package.json  vercel.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Layout.jsx
frontend/src/pages/: ChatPage.jsx  DocsPage.jsx  IssuesPage.jsx  PullRequestsPage.jsx
scripts/: docker-entrypoint.sh  set_env.sh
