[project]
name = "repo-intel"
version = "1.0.0"
description = "AI-powered repository intelligence — semantic code search, PR review, documentation, and bug tracking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "langchain>=1.0.5",
    "langchain-core>=1.0.4",
    "langchain-openai>=1.0.2",
    "langfuse==3.9.1",
    "langgraph>=1.0.2",
    "langgraph-checkpoint-postgres>=3.0.1",
    "psycopg[binary]>=3.3.2",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.1",
    "python-dotenv>=1.1.0",
    "sqlmodel>=0.0.25",
    "structlog>=25.2.0",
    "uvicorn>=0.34.0",
    "prometheus-client>=0.19.0",
    "starlette-prometheus>=0.7.0",
    "asgiref>=3.8.1",
    "duckduckgo-search>=3.9.0",
    "langchain-community>=0.4.1",
    "tqdm>=4.67.1",
    "ddgs>=9.6.0",
    "tenacity>=9.1.2",
    "mem0ai>=1.0.0",
    "uvloop>=0.22.1; platform_system != 'Windows'",
    "asgi-correlation-id>=4.3.4",
    "alembic>=1.18.4",
    "tree-sitter>=0.21.3",
    "tree-sitter-languages>=1.10.2",
    "pgvector>=0.2.5",
    "sentence-transformers>=5.6.0",
    "groq>=1.5.0",
    "langchain-huggingface>=1.0.1",
    "mcp>=1.2.0",
    "tiktoken>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyinstrument>=5.1.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.390",
    "ruff>=0.11.4",
]
test = ["httpx>=0.28.1", "pytest>=8.3.5"]


[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
python_files = ["test_*.py", "*_test.py", "tests.py"]

[tool.ruff]
line-length = 119
exclude = ["migrations", "*.ipynb", "venv"]

[tool.ruff.lint]
select = ["E", "F", "B", "ERA", "D"]
ignore = ["E501", "D203", "D213", "B904", "B008"]
unfixable = ["B"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.pyright]
include = ["app"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "alembic/versions",
    "migrations",
    "venv",
]
stubPath = "typings"
pythonVersion = "3.12"
typeCheckingMode = "standard"

reportDuplicateImport = "error"
reportInvalidTypeVarUse = "error"
reportSelfClsParameterName = "error"
reportImplicitOverride = "warning"
